--- a/Myportfolio/src/App.css
+++ b/Myportfolio/src/App.css
@@ -11,7 +11,7 @@
     --accent-2:#a78bfa; /* purple */
     --glass: rgba(255,255,255,0.04);
     --radius:14px;
-    --max-width:1100px;
+    --max-width:100%;
     --gap:20px;
     --glass-border: rgba(255,255,255,0.06);
     font-family: Inter, ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
@@ -31,12 +31,13 @@
     margin:0;
     background:linear-gradient(180deg,var(--bg), #071124 120%);
     color:#e6eef8;
-    display:flex;
+   
     align-items:center;
     justify-content:center;
-    padding:40px 20px;
+    /* padding:40px 20px; */
     -webkit-font-smoothing:antialiased;
     -moz-osx-font-smoothing:grayscale;
+    max-width: 100%;
   }
    }
 .show-card{
@@ -90,10 +91,22 @@ html {
   box-shadow: 0 5px 15px rgba(0,0,0,0.2);
   color: white;
 }
+.hhero-image{
+  max-width: 100%;
+  height: auto;
+  display: flex;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content:center;
+  overflow:hidden;
+ position: relative;
+}
 .my-image{
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+  width:100%;
+  height:100%;
+  object-fit:cover;
+  display:block;
   margin-bottom: 180px;
   
 }
@@ -102,7 +115,7 @@ html {
 
    
 .about-wrap{
-    width:100%;
+    /* width:100%; */
     max-width:var(--max-width);
     display:grid;
     grid-template-columns: 360px 1fr;
